@@ -106,6 +106,7 @@ trait StubMain {
     def reflectiveAccess = {
       "--add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED " +
         "--add-opens java.desktop/sun.awt=ALL-UNNAMED " +
+//        "--add-opens java.desktop/sun.awt.windows=ALL-UNNAMED " +
         "--add-opens java.desktop/sun.swing=ALL-UNNAMED " +
         "--add-opens java.desktop/sun.swing.table=ALL-UNNAMED"
     }
